$Id$

version ? (????-??-??):

  - don't overwrite invoice's creation time on edit if date wasn't changed (alec)
  - lmsd/payments: fixed leap year bug in annual payments (alec)
  - lms-payments: fixed leap year bug in annual payments (alec)
  - BTS#0000754: fixed year selector in Timetable (alec)

version 1.10.4 Pyrus (2008-05-04):

  - Aliases List: removed unused sql query (alec)
  - BTS#0000732: lmsd/ewx-pt: fixed *TableSave OID (alec)
  - BTS#0000736: fixed assignment addition when taxid is not set (alec)
  - BTS#0000734: fixed problem with \r\n on pdf invoices (alec)
  - Balance Sheet: fixed memory usage problem and increased speed of
    groups filtering (alec)
  - updated ethernet vendors list (alec)
  - updated Smarty to 2.6.19 (alec)

version 1.10.3 Vidrine (2008-02-10):

  - fixed 'at' checking of yearly assignments when 'at' is empty (alec)
  - BTS#0000713: fixed financial operations mass addition (alec/endrju)
  - fixed members count in customers group info when network
    filter is used (alec)
  - fixed customers group deleting from group info and edit forms (alec)
  - fix: added node assignments deleting in CustomerDelete() (alec)
  - removed redundant GetNodeList() call in netdevinfo (alec)
  - lms-notify-sms: fixed sql query on mysql (alec)
  - fixed 'suspended' filter on customers list (alec)
  - fixed payments accounting from Payments List (alec)
  - fix: set proper cash.time in AddInvoice() (alec)
  - quicksearch: searching ID columns by '=' not LIKE operator, it's not
    a bug but it wasn't working on postgresql 8.3 (alec) 

version 1.10.2 Roham (2007-12-12):

  - fix: allow searching strings with '/' sign in quicksearch (alec)
  - BTS#0000706: fixed query in Finances/Reports/Network Balance Sheet (alec)
  - fixed all invoices selection on customers balance page (alec)
  - removed unused GetNumberPlans() function call in cash receipts 
    interface (alec)
  - fixed customer short address printing on contrib/formularz_przelewu... (alec)